5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1577_1330.log
== SUBMITION (2019-03-14 19:24:35) 
-- CODE:
print(250/4)
-- EXECUTION TIME:
0.145112
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:50) 
-- CODE:
print(round(250/4, 2))
-- EXECUTION TIME:
0.200608
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:25:51) 
-- CODE:
print(round(250/4, 2))
-- EXECUTION TIME:
0.118646
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
62.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:27) 
-- CODE:
print(round(x, n) 250/4)
-- EXECUTION TIME:
0.133915
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round(x, n) 250/4)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:28) 
-- CODE:
print(round(x, n) 250/4)
-- EXECUTION TIME:
0.137548
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round(x, n) 250/4)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:28) 
-- CODE:
print(round(x, n) 250/4)
-- EXECUTION TIME:
0.124389
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round(x, n) 250/4)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:28) 
-- CODE:
print(round(x, n) 250/4)
-- EXECUTION TIME:
0.10918
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round(x, n) 250/4)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:26:29) 
-- CODE:
print(round(x, n) 250/4)
-- EXECUTION TIME:
0.129532
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round(x, n) 250/4)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:27:01) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.137566
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
